# new-GQ-implementation-for-UBIC

./: CMakeLists.txt  README.md  main.cpp
NtpRsk/: NtpRsk.cpp  NtpRsk.h  NtpRskSignatureVerificationObject.h
